--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
+    "react-devtools": "^4.25.0",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-table-component": "^1.2.2",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -28,6 +30,7 @@
     "@react-native-community/eslint-config": "^3.0.3",
     "babel-jest": "^28.1.2",
     "eslint": "^8.19.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.2",
     "metro-react-native-babel-preset": "^0.71.2",
     "react-test-renderer": "17.0.2"
