--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.10.1",
