--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.3.8",
     "react": "17.0.2",
     "react-devtools": "^4.25.0",
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "3.3.2",
