--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-devtools": "^4.25.0",
     "react-native": "0.68.2",
+    "react-native-countdown-circle-timer": "^3.1.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-elements": "^3.4.2",
