--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
