--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.5",
+    "react-native-paper": "^5.1.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-snap-carousel": "^3.9.1",
