--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.5.0",
@@ -23,7 +24,6 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-paper": "^4.12.5",
     "react-native-paper": "^5.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "3.3.2",
